# ChessProject

./: CMakeLists.txt  idk.txt  input.cpp  input.h  logic.cpp  logic.h  main.cpp  move.cpp  newMain.cpp
